tests/baselines/reference/checkJsdocReturnTag1.errors.txt
returns.js(20,12): error TS2869: This expression is always truthy. Did you mean to test something else?


==== returns.js (1 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return "hello";
    }
    
    /**
     * @returns {string=} This comment is not currently exposed
     */
    function f1() {
        return "hello world";
    }
    
    /**
     * @returns {string|number} This comment is not currently exposed
     */
    function f2() {
        return 5 || "hello";
               ~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    }
    